--- a/style.css
+++ b/style.css
@@ -594,7 +594,7 @@ header .container {
 }
 
 .contact-form {
-    margin-left: 93px;
+    margin-left: auto;
 }
 
 .form-list {
@@ -824,15 +824,18 @@ header .container {
     display: block;
 
 }
-  
+
 .form-block {   
     margin-bottom: 10px;   
+}
+
+.form-block--last {
+    margin-bottom: 0;
 }
 
 .input-wrap {
     position: relative;
 }
-
  
 .icon {
     position: absolute;
@@ -864,7 +867,7 @@ header .container {
     fill: #2196F3;   
 }  
 
-.form-message {
+.form-message {   
     padding: 12px 16px;
     width: 100%;
     border: 1px solid rgba(33, 33, 33, 0.2);
